--- a/test.html
+++ b/test.html
@@ -13,6 +13,15 @@
         font-stretch: expanded;
         font-size: 100px;
         color: aqua;
+    } 
+    h1 {
+        background-color: rgb(99, 110, 100);
+        font-style: italic;
+        font-stretch: expanded;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-stretch: expanded;
+        font-size: 100px;
+        color: aqua;
     }
     
     table,
