--- a/01/index.html
+++ b/01/index.html
@@ -10,29 +10,31 @@
 
     </head>
     <body>
+        <br><br>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-4 bg-primary text-white">Column 1</div>
+                <div class="col-md-4 col-4 bg-primary text-white ">Column 1</div>
                 <div class="col-md-4 col-4 bg-primary text-white">Column 2</div>
                 <div class="col-md-4 col-4 bg-primary text-white">Column 3</div>
             </div>
         </div>
+<br><br>
 
-        <div class="container">
-            <button class="btn">Button</button>
-            <button class="btn btn-primary">Primary Button</button>
-            <button class="btn btn-secondary">Primary Button</button>
-            <button class="btn btn-danger">Primary Button</button>
-        </div>
-        
-        <div class="container">
-            <form action="">
-                <div class="mb-3">
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name">
-                </div>
-            </form>
-        </div>
+<p class="text-primary">Primarty Text</p>
+<p class="text-success">Success Text</p>
+<p class="text-danger">Danger Text</p>
+<div class="bg-warning text-dark">Waring</div>
+<div class="bg-info text-white">Info</div>
+
+<p class="text-start">Left Align</p>
+<p class="text-center">Center Align</p>
+<p class="text-end">End Align</p>
+
+<div class="m-5">Margin</div>
+<div class="mb-3">Margin</div>
+<br>
+<div class="mx-auto" style="width: 200px;">Centered Div</div>
+<div class="m-5 p-5">assas</div>
         <!-- Bootstrap JS (optional, for interactive components like modals) -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
